--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 	
 	<div class="">
 		<!-- Navigation Links -->
-		<a href="#" class="">Home</a>
-		<a href="#" class="">Posts</a>
-		<a href="#" class="">About Us</a>
-		<a href="#" class="">Contact Us</a>
-		<a href="#" class="">F.A.Q.</a>
+		<a href="#" class="nav-link">Home</a>
+		<a href="#" class="nav-link">Posts</a>
+		<a href="#" class="nav-link">About Us</a>
+		<a href="#" class="nav-link">Contact Us</a>
+		<a href="#" class="nav-link">F.A.Q.</a>
 	</div>
 	<hr />
 	<h2>Image Gallery</h2>
 	<!-- Image Gallery -->
-	<ul class="">
-		<li class=""><img src="http://placehold.it/200x200" /></li>
-		<li class=""><img src="http://placehold.it/200x200" /></li>
-		<li class=""><img src="http://placehold.it/200x200" /></li>
-		<li class=""><img src="http://placehold.it/200x200" /></li>
+	<ul class="list">
+		<li class="item"><img src="http://placehold.it/200x200" /></li>
+		<li class="item"><img src="http://placehold.it/200x200" /></li>
+		<li class="item"><img src="http://placehold.it/200x200" /></li>
+		<li class="item"><img src="http://placehold.it/200x200" /></li>
 	</ul>
 
 	<hr />
 	<h2>Content With Sidebar</h2>
 	<!-- Main Content -->
-	<div class="">
+	<div class="main">
 		<h3>Content Header</h3>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium metus eu malesuada sagittis. Praesent at metus lorem.
@@ -46,14 +46,14 @@
 		</p>
 	</div>
 	<!-- Side Bar -->
-	<div class="">
+	<div class="side-bar">
 		<ul>
 			<li>Item 1</li>
 			<li>Item 2</li>
 			<li>Item 3</li>
 		</ul>
 	</div>
-	<div class="">
+	<div class="footer">
 		<a href="#">About Us</a>
 		<a href="#">Contact Us</a>
 		<a href="#">F.A.Q.</a>
